drone-agent.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-agent
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: drone-agent
    spec:
      containers:
      - name: drone-agent
        image: drone/drone:0.7.3
        args: ["agent"]
        volumeMounts:
        - mountPath: /var/run/docker.sock
          name: docker-sock
        ports:
        - containerPort: 8000
      volumes: 
        - name: docker-sock
          hostPath: 
            path: /var/run/docker.sock
