drone-server.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: drone
    spec:
      containers:
      - name: nginx
        image: us.gcr.io/high-gecko-144218/drone-health
        ports:
        - containerPort: 80
          hostPort: 80
      - name: drone
        image: drone/drone:0.7.3
        volumeMounts:
        - mountPath: /var/lib/drone
          name: drone
        ports:
        - containerPort: 8000
      volumes: 
        - name: drone
          emptyDir: {}
        # Use this for openstack cinder driver instead of emptyDir. 
        #- name: drone
        #  cinder: 
        #    volumeID: 82a8cc65-7379-4240-b428-f4c7b9b86465
        #    fsType: ext4
