drone-http-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone-http
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: drone
  sessionAffinity: None
  type: NodePort
