drone-svc.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: v1
kind: Service
metadata:
  name: drone-svc
spec:
  ports:
  - port: 8000 
    protocol: TCP
    targetPort: 8000
  selector:
    app: drone
  sessionAffinity: None
  type: NodePort
